--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "symfony/property-info": "7.2.*",
         "symfony/runtime": "7.2.*",
         "symfony/serializer": "7.2.*",
+        "symfony/stimulus-bundle": "^2.25",
         "symfony/twig-bundle": "7.2.*",
+        "symfony/ux-turbo": "^2.25",
         "symfony/yaml": "7.2.*",
         "symfonycasts/tailwind-bundle": "^0.10.0",
         "twig/extra-bundle": "^2.12|^3.0",
